# simple_robotic_arm

src/sra/: CMakeLists.txt  package.xml
src/sra/arm_desc/: arm.urdf.xacro  arm_gazebo.xacro  arm_ros2_control.xacro
src/sra/config/: arm_controllers.yaml
src/sra/launch/: arm.launch.py
src/sra/src/: simple_publisher.cpp  simple_service_client.cpp  simple_service_server.cpp  simple_subscriber.cpp
src/sra_msgs/: CMakeLists.txt  package.xml
